public/style.css
* {
  box-sizing: border-box;
}

html {
  font-size: 16px;
}

body {
  font-size: 100%;
  font-family: Helvetica, Arial, sans-serif;
  padding: 2rem;
  text-align: center;
}

.jokeContent {
  margin: 0 0 3rem 0;
}

.formGroup {
  padding: 0 0.5rem;
}

.averageRating {
  margin: 2rem 0;
}

.card-background {
  background-image: url(https://images.unsplash.com/photo-1530893609608-32a9af3aa95c?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=3800&q=80);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  width: 100%;
  height: 100%;
  position: absolute;
}
.crd-holder {
  position: relative;
  display: block;
}

.card {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 400px;
  height: 250px;
  background-color: transparent;
  backdrop-filter: blur(30px);
  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
  border-radius: 20px;
  padding: 20px;
  opacity: 1;
  color: white;
  transition: all 500ms ease-out;
}

.card a {
  color: white;
}

.card:hover {
  animation-name: animatedCard;
  transition: all 300ms ease-in;
  width: 500px;
  height: 200px;
  backdrop-filter: blur(5px);
  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
}

.center-text {
  text-align: center;
}
@keyframes animatedCard {
  from {
    width: 0px;
  }
  to {
    width: 500px;
  }
}

